# runtime

./: .editorconfig  .flake8  .gitignore  COPYRIGHT  README.md  activate.cmd  activate.sh  activate_venv.cmd  cl.runtime.settings.yaml  deactivate_venv.cmd  init_venv.cmd  pyproject.toml  run_formatters.cmd  run_formatters.sh  run_linters.cmd  run_linters.sh  settings.yaml  setup.py  sonar-projects.properties
.cursor/: config.json
.github/workflows/: python-package.yml
cl/runtime/: __init__.py  __main__.py  _version.py  bootstrap.py  csv_util.py
cl/runtime/auth/: local_secrets_provider.py  secrets_provider.py  user_secrets.py
cl/runtime/configs/: config.py  config_key.py
cl/runtime/configurations/: configuration.py  configuration_key.py  preload_configuration.py
cl/runtime/context/: base_context.py  context.py  context_extension.py  context_manager.py  context_mixin.py  context_util.py  db_context.py  env_util.py  extension_context.py  log_context.py  no_op_context.py  null_progress.py  process_context.py  testing_context.py  trial_context.py  user_context.py
cl/runtime/contexts/: app_context.py  context.py  context_manager.py  context_mixin.py  context_snapshot.py  context_util.py  data_context.py  db_context.py  env.py  env_util.py  lifecycle_mixin.py  log_context.py  no_op_context.py  os_util.py  process_context.py  trial_context.py  user_context.py  user_secrets.py
cl/runtime/db/: data_source.py  data_source_key.py  data_source_tool.py  data_source_tool_key.py  dataset.py  dataset_key.py  dataset_util.py  db.py  db_key.py  filter.py  filter_by_query.py  filter_by_type.py  filter_key.py  filter_many.py  filter_where.py  permission.py  permission_key.py  permission_keys.py  protocols.py  query_mixin.py  resource.py  resource_key.py  save_policy.py  sort_order.py  tenant.py  tenant_key.py
cl/runtime/events/: db_event_broker.py  event.py  event_broker.py  event_broker_key.py  event_key.py  log_event.py  sse_query_util.py  task_event.py  task_finished_event.py
cl/runtime/exceptions/: error_util.py
cl/runtime/experiments/: binary_experiment.py  binary_experiment_key.py  binary_experiment_mixin.py  binary_trial.py  binary_trial_key.py  binary_trial_mixin.py  classifier_experiment.py  classifier_experiment_mixin.py  classifier_trial.py  classifier_trial_mixin.py  experiment.py  experiment_key.py  experiment_key_query.py  experiment_kind_key.py  experiment_mixin.py  experiment_scenario.py  experiment_scenario_key.py  experiment_type.py  experiment_type_key.py  supervised_binary_experiment.py  supervised_binary_experiment_mixin.py  supervised_binary_trial.py  supervised_binary_trial_mixin.py  supervised_classifier_experiment.py  supervised_classifier_experiment_mixin.py  supervised_classifier_trial.py  supervised_classifier_trial_mixin.py  trial.py  trial_key.py  trial_key_query.py  trial_mixin.py  trial_partition.py  trial_query.py  trial_shard.py
cl/runtime/fallback/: fallback_static_files.py  index.py
cl/runtime/file/: csv_file_reader.py  csv_file_util.py  csv_reader.py  file_data.py  file_kind.py  file_type.py  file_util.py  json_reader.py  project_layout.py  reader.py  reader_key.py  yaml_reader.py
cl/runtime/legacy/: legacy_request_util.py  legacy_response_util.py
cl/runtime/log/: db_log_handler.py  event_log_handler.py  log.py  log_config.py  log_key.py  log_level.py  log_message.py  log_message_key.py  task_log.py  task_logs.py  ui_clear_logs_marker.py  ui_clear_logs_marker_key.py  ui_log_util.py  user_log_message.py
cl/runtime/params/: param.py  param_key.py
cl/runtime/parsers/: locale.py  locale_key.py  locale_keys.py
cl/runtime/plots/: bar_plot.py  categorical_box_plot.py  confusion_matrix_plot.py  group_bar_plot.py  heat_map_plot.py  line_plot.py  matplotlib_plot.py  matplotlib_util.py  matrix_util.py  multi_plot.py  plot.py  plot_color.py  plot_key.py  plot_line_style.py  plot_marker_style.py  plot_surface_style.py  plotting_engine.py  plotting_engine_key.py  scatter_plot_2d.py  scatter_plot_3d.py  scatter_values_2d.py  scatter_values_3d.py  stack_bar_plot.py
cl/runtime/prebuild/: copyright_header.py  copyright_util.py  csv_file_util.py  csv_preloads.py  import_util.py  init_file_util.py  init_files.py  timestamp_format_util.py  version_format.py  version_util.py
cl/runtime/primitive/: bool_format_enum.py  bool_util.py  bytes_format_enum.py  case_util.py  char_util.py  date_format_enum.py  date_util.py  datetime_format_enum.py  datetime_util.py  dict_serializers.py  enum_util.py  float_format_enum.py  float_list_util.py  float_util.py  format_util.py  identifier_util.py  int_format_enum.py  int_util.py  limits.py  long_format_enum.py  long_util.py  none_format_enum.py  primitive_checks.py  primitive_serializers.py  primitive_util.py  string_format_enum.py  string_util.py  time_format_enum.py  time_util.py  timestamp.py  timestamp_format_enum.py  uuid_format_enum.py  uuid_util.py
cl/runtime/project/: project_checks.py  project_layout.py  project_layout_kind.py
cl/runtime/qa/: png_util.py  qa_client.py  qa_util.py  regression_guard.py
cl/runtime/records/: bootstrap_mixin.py  bootstrap_util.py  build_mixin.py  build_util.py  build_what_enum.py  builder_checks.py  builder_mixin.py  builder_util.py  cast_util.py  class_info.py  data_util.py  (+51 more)
resources/bootstrap/: TypeInfo.csv
scripts/: init_venv.cmd
(+1280 files in other folders)
