[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
exclude = [".venv", ".git", "__pycache__"]

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py311']
force-exclude = '''
/(
    \.idea
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=58.1.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Import discovery
namespace_packages = true
explicit_package_bases = true
mypy_path = ["C:\\Source\\TradeEntry\\Code\\runtime-build\\runtime"]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

# External package handling
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*"
]
ignore_missing_imports = true