[project]
name = "cl-runtime"
version = "2025.1217.0"
description = "CompatibL Runtime Community Edition"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache Software License" }
authors = [
    { name = "The Project Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=0.8.0",
    "aiomysql>=0.1.1",
    "alembic>=1.8.1",
    "asyncio>=3.4.0",
    "attrs>=23.2.0",
    "azure-storage-blob>=12.25.1",
    "boto3>=1.37.31",
    "celery>=5.2.7",
    "click>=8.1.3",
    "concurrent-log-handler>=0.9.20",
    "cryptography>=43.0.0",
    "dateparser>=1.2.0",
    "dynaconf>=3.1.7",
    "fastapi-event>=0.1.3",
    "fastapi>=0.111.0",
    "frozendict>=2.4.6",
    "fsspec>=2025.3.0",
    "greenlet>=1.1.3",
    "gunicorn>=20.1.0",
    "httpx>=0.23.3",
    "inflection>=0.5.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "ldap3>=2.9.1",
    "locate>=1.1.1",
    "markdown2>=2.4.2",
    "matplotlib>=3.9.2",
    "memoization>=0.4.0",
    "mmh3>=3.0.0",
    "more-itertools>=10.5.0",
    "networkx>=3.3",
    "numpy>=2.3.3",
    "orjson>=3.10.3",
    "pandas>=2.3.2",
    "pika>=1.3.2",
    "pdoc>=12.0.2",
    "plotly>=6.3.0",
    "pydantic>=2.5.3",
    "PyJWT>=2.4.0",
    "pymongo>=4.0.1",
    "pytest>=6.1.1",
    "python-box>=7.3.2",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.19.2",
    "python-multipart>=0.0.12",
    "pythondi>=1.2.4",
    "ruamel.yaml>=0.18.10",
    "redis>=4.3.4",
    "regex>=2024.9.11",
    "reportlab>=3.6.5",
    "requests>=2.28.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "SQLAlchemy>=1.4.40",
    "sse-starlette>=1.2.1",
    "starlette>=0.37.2",
    "typing-inspect>=0.7.1",
    "ujson>=5.4.0",
    "uuid-utils>=0.9.0",
    "uvicorn>=0.18.3",
    "websockets>=10.4",
    "xmltodict>=0.12.0",
]
[project.urls]
"Repository" = "https://github.com/compatibl/runtime"

[tool.hatch.build.targets.wheel]
packages = ["cl/runtime"]
exclude = [
    "/tests",
    "/tests.*",
]

[tool.hatch.build.targets.wheel.shared-data]
"cl/runtime/py.typed" = "cl/runtime/py.typed"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
exclude = [".venv", ".git", "__pycache__"]

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py311']
force-exclude = '''
/(
    \.idea
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

# External package handling
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*"
]
ignore_missing_imports = true